--- a/exemples/index.css
+++ b/exemples/index.css
@@ -11,11 +11,19 @@
     }
 .container {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+    font-size: 20px;
+    text-transform: capitalize;
 
 }
 ul {
     list-style: none;
     display: flex;
+}
+li {
+    margin: 0 10px;
 }
 header {
     background-color: #186CB0;
@@ -23,4 +31,9 @@ header {
     max-width: 1200px;
     margin: auto;
     padding: 5px;
+}
+#nav_container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
