--- a/exemples/index.css
+++ b/exemples/index.css
@@ -9,44 +9,64 @@
     box-sizing: border-box;
     font-family: Uniform;
     }
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+#container_main {
+    background-color: antiquewhite;
+    margin: 10px;
+}
+#container_publicite {
+    background-color: aquamarine;
+    margin: 5px;
+}
+#pub_et_promotion {
+    background-color: aqua;
+    margin: 10px;
+    position: relative;
+}
+#pub {
+    background-color: brown;
+    margin: 15px;
+}
+#promotion {
+    background-color: rgba(13, 13, 13, 0.5);
     margin: 20px;
-    font-size: 20px;
-    text-transform: capitalize;
-
-}
-ul {
-    list-style: none;
-    display: flex;
-}
-a {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-#li_mon_compte {
-    margin: 0 10px;
-
-}
-#li_espace_pro {
-    margin: 0 10px;
-}
-
-header {
-    background-color: #186CB0;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
     color: white;
-    max-width: 1200px;
-    margin: auto;
-    padding: 5px;
 }
-#nav_container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+#promotion_texte {
+    color: white;
+    margin: 10px;
 }
+
+#bouton_promotion {
+    background-color: red;
+    width: 100%;
+    color: white;
+    margin: 10px;
+}
+img {
+    width: 100%;
+    height: 100%;
+}
+#tarifs {
+    background-color: greenyellow;
+    color: blue;
+}
+#container_type_abonnement {
+    background-color: yellow;
+}
+#abo_illimity {
+    background-color: pink;
+}
+#titre {
+    background-color: blueviolet;
+}
+
 @media screen and (max-width: 480px) {
 
     #li_espace_pro {
