--- a/exemples/index.css
+++ b/exemples/index.css
@@ -53,9 +53,31 @@ img {
     width: 100%;
     height: 100%;
 }
+#Tarifs_et_films {
+    
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    justify-content: center;
+}
+#tarif {
+    background-color: #186CB0;
+    color: white ;
+    text-align: center;
+    width: 50%;
+    margin: 0 4px 0 0;
+    
+}
 #tarifs {
-    background-color: greenyellow;
-    color: blue;
+    background-color: #186CB0;
+    color: white ;
+}
+#films {
+    background-color: #186CB0;
+    color: white;
+    text-align: center;
+    width: 50%;
+    margin: 0 0 0 4px;
 }
 #container_type_abonnement {
     background-color: yellow;
@@ -66,7 +88,9 @@ img {
 #titre {
     background-color: blueviolet;
 }
-
+#container_general {
+    margin: 10px;
+}
 @media screen and (max-width: 480px) {
 
     #li_espace_pro {
