--- a/exemples/index.css
+++ b/exemples/index.css
@@ -64,6 +64,10 @@ img {
     background-color: white;
     color: #186CB0 ;
 }
+#container_films {
+    background-color: white;
+    color: #186CB0 ;
+}
 #films {
     background-color: #186CB0;
     color: white;
@@ -77,16 +81,34 @@ img {
     color: black;
     background-color: rgb(214, 211, 211);
     padding: 5px;
-
 }
 #abo_illimity {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
-
 #container_general {
     margin: 10px;
+}
+#container_type_film {
+    background-color: rgb(17, 240, 95);
+}
+#presentation {
+    background-color: aquamarine;
+}
+#image_film {
+    background-color: pink;
+    width: 80px;
+}
+#titre_film {
+    background-color: gray;
+}
+#image_etoiles {
+    width: 30px;
+    height: 30px;
+}
+#synopsis {
+    background-color: red;
 }
 @media screen and (max-width: 480px) {
 
