--- a/exemples/index.css
+++ b/exemples/index.css
@@ -89,7 +89,7 @@ img {
 }
 #grand_container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 #container_general {
     margin: 10px;
@@ -98,6 +98,10 @@ img {
     background-color: rgb(214, 211, 211);
     display: flex;
     margin: 10px;
+    justify-content: space-between;
+}
+.grandePresentation {
+    display: flex;
 }
 #presentation {
     background-color: rgb(214, 211, 211);
@@ -160,7 +164,8 @@ img {
     align-items: end;
 }
 #secondBlocAvecSalles {
-    background-color: aqua;
+    background-color: gray;
+    margin: 10px;
 }
 @media screen and (max-width: 480px) {
 
